@@ -1,3 +1,4 @@
+  - add multidimensional and bareword::filehandles in author mode
 1.1.1 Dec 05 2010
   - disable uninitialized warnings before calling ->SUPER::VERSION
 1.1.0 Nov 22 2010
